# cardgame_widgets

./: Cargo.toml  LICENSE
examples/: animated_canvas.rs  animated_canvas1.rs  arrange_list.rs  bordered_image.rs  drag_drop.rs  drag_drop1.rs  full_cycle_sprite.rs  image_hover.rs  image_panels.rs  instructionset.rs  notification.rs  player_info.rs  promptview.rs  shuffle.rs  std_list_select.rs  table_list.rs  xy_pad.rs
examples/support/: mod.rs
src/: lib.rs  sprite.rs  text.rs
src/custom_widget/: animated_button.rs  animated_canvas.rs  arrange_list.rs  backcardview.rs  bordered_image.rs  cardviewpartial.rs  dragdrop_list.rs  dragdrop_list1.rs  error_dialogue.rs  full_cycle_sprite.rs  image_hover.rs  instructionset.rs  instructionview.rs  list_select.rs  mod.rs  notification.rs  pad_text_button.rs  progress_bar.rs  promptview.rs  promptview_animate.rs  sample_drag_image.rs  shuffle.rs  table_list.rs  tabview.rs  test.rs  wrap_list.rs
src/custom_widget/arrange_list/: item.rs  mod.rs  widget_mut.rs
src/custom_widget/image_panels/: item.rs  item_history.rs  list_select.rs  mod.rs  panel.rs
src/custom_widget/player_info/: item.rs  list.rs
src/custom_widget/shuffle/: mod.rs
