[package]
name = "cardgame_widgets"
version = "0.1.0"
authors = ["alanpoon"]

[dependencies]
conrod = { git ="https://github.com/alanpoon/conrod.git", branch="update_syn_old", features = ["glium","winit"]}
conrod_derive = {git ="https://github.com/alanpoon/conrod.git", branch="update_syn_old"}

[dev-dependencies]
image = "0.15.0"
find_folder = "0.3.0"